--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-uglify": "^3.0.0",
     "gulp-watch": "^4.3.11",
     "imagemin-pngquant": "^5.0.1",
+    "instafeed.js": "^1.4.1",
     "jquery": "^3.2.1",
     "jquery.maskedinput": "^1.4.1",
     "node-sass": "^4.14.1",
