--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "swiper": "^5.2.1"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3"
+    "bootstrap": "^4.1.3",
+    "tinymce": "^5.8.1"
   }
 }
